Update Reward UI

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="has-navbar-fixed-top">
 <style>
     .center-screen {
         display: flex;
@@ -60,17 +60,17 @@
 </head>
 
 <body>
-    <section class="section hero is-fullheight is-dark is-bold">
-        <div class="hero-head is-fullwidth">
-            <div class="navbar">
-                <div class="container">
-                    <div class="navbar-brand">
-                        <a class="navbar-item" href="https://clutrack.io/">
-                            <img src="https://clucoin.com/static/images/3000.png" style="margin-right: 2%" alt="Logo">
-                            CLUTRACK.IO
-                        </a>
-                    </div>
-                    <div class="navbar-end">
+    <nav class="navbar is-fixed-top is-bold is-primary" style="background-color: rgb(32, 32, 32);">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="https://clutrack.io/">
+                    <img src="https://clucoin.com/static/images/3000.png" style="margin-right: 2%" alt="Logo">
+                    CLUTRACK.IO
+                </a>
+            </div>
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
                         <a style="margin-left: 5px;" class="button is-primary gradient"
                             href="https://github.com/M4cs/clutrack-io" target="_blank">
                             View Source Code
@@ -78,6 +78,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </nav>
+    <section class="section hero is-fullheight is-dark " style="background-color: rgb(32, 32, 32);">
+        <div class="hero-head is-fullwidth">
         </div>
         <div class="hero-body">
             <div class="container">
