--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -132,7 +132,7 @@
             </div>
         </div>
     </section>
-    <section class="hero is-dark is-medium">
+    <section class="hero is-dark is-medium" style="background-color: rgb(41, 41, 41);">
         <div class="hero-body" id="safetyInfo">
             <div class="container">
                 <div class="columns is-desktop">
