--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -89,11 +89,9 @@
         </div>
     </nav>
     <section class="section hero is-fullheight is-dark " style="background-color: rgb(32, 32, 32);">
-        <div class="hero-head is-fullwidth">
-        </div>
         <div class="hero-body">
             <div class="container">
-                <h1 class="title">CluCoin Redistribution Tracker</h1>
+                <h1 class="title">CluCoin Reflection Tracker</h1>
                 <h1 class="title" id="title">
 
                 </h1>
@@ -121,14 +119,6 @@
                         </div>
                     </div>
                 </form>
-            </div>
-        </div>
-        <div class="hero-foot">
-            <div class="container has-text-centered">
-
-                <a class="subtitle" href="#safetyInfo">
-                    ▼ Safety Info Below ▼
-                </a>
             </div>
         </div>
     </section>
