--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
     </nav>
-    <section class="section hero is-fullheight is-dark " style="background-color: rgb(32, 32, 32);">
+    <section class="section hero is-medium is-dark " style="background-color: rgb(32, 32, 32);">
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">CluCoin Reflection Tracker</h1>
@@ -123,6 +123,12 @@
         </div>
     </section>
     <section class="hero is-dark is-medium" style="background-color: rgb(41, 41, 41);">
+        <div class="hero-head">
+            <br><br>
+            <div class="container has-text-centered">
+                <a href="#safetyInfo"><h1 class="title is-1">F.A.Q</h1></a>
+            </div>
+        </div>
         <div class="hero-body" id="safetyInfo">
             <div class="container">
                 <div class="columns is-desktop">
