--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -96,7 +96,7 @@
 
                 </h1>
                 <p class="subtitle">
-                    Connect to your BSC Wallet and join {{count}} others tracking their rewards<br>
+                    Connect to your Binance Smart Chain (BSC) Wallet and join thousands of others in tracking their rewards<br>
                     Linking your wallet enables lifetime tracking and better reports!
                 </p>
                 <button id="rusty" onclick="sign()" class="button is-rounded is-primary is-outlined">
