--- a/app/templates/badaddress.html
+++ b/app/templates/badaddress.html
@@ -69,12 +69,18 @@
                             CLUTRACK.io
                         </a>
                     </div>
-                    {{tipjar_navbar}}
-                    <div class="navbar-end">
-                        <a style="margin-left: 5px;" class="button is-primary gradient"
-                            href="https://github.com/M4cs/clutrack-io" target="_blank">
-                            View Source Code
-                        </a>
+                    <div id="navbarBasicExample" class="navbar-menu">
+                        <div class="navbar-end">
+                            {{tipjar_navbar}}
+                            <div class="navbar-item">
+                                <div class="buttons">
+                                    <a style="margin-left: 5px;" class="button is-primary gradient"
+                                        href="https://github.com/M4cs/clutrack-io" target="_blank">
+                                        View Source Code
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
