--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -78,7 +78,6 @@
             </div>
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-end">
-                    {{tipjar_navbar}}
                     <div class="navbar-item">
                         <div class="buttons">
                             <a style="margin-left: 5px;" class="button is-primary gradient"
@@ -196,49 +195,55 @@
                     <div class="container has-text-centered">
                         <h1 class="title" style="color: black">Team Socials</h1>
                         <div class="field is-grouped-centered">
-                            <div class="row">
-                                <a target="_blank" class="button is-info" href="https://twitter.com/maxbridgland">
-                                    <span class="icon">
-                                        <i class="fab fa-twitter"></i>
-                                    </span>
-                                    <span>@maxbridgland</span>
-                                </a>
-                                <a target="_blank" class="button" href="https://github.com/M4cs">
-                                    <span class="icon">
-                                        <i class="fab fa-github"></i>
-                                    </span>
-                                    <span>GitHub</span>
-                                </a>
-                                <a target="_blank" class="button is-dark" href="https://linkedin.com/in/maxbridgland">
-                                    <span class="icon is-small">
-                                        <i class="fab fa-linkedin"></i>
-                                    </span>
-                                    <span>LinkedIn</span>
-                                </a>
+                            <div class="columns">
+                                <div class="column">
+                                    <p class="subtitle" style="color: deeppink;">Max Bridgland</p>
+                                    <div class="buttons is-centered">
+                                        <a target="_blank" class="button is-info" href="https://twitter.com/maxbridgland">
+                                            <span class="icon">
+                                                <i class="fab fa-twitter"></i>
+                                            </span>
+                                            <span>@maxbridgland</span>
+                                        </a>
+                                        <a target="_blank" class="button" href="https://github.com/M4cs">
+                                            <span class="icon">
+                                                <i class="fab fa-github"></i>
+                                            </span>
+                                            <span>GitHub</span>
+                                        </a>
+                                        <a target="_blank" class="button is-dark" href="https://linkedin.com/in/maxbridgland">
+                                            <span class="icon is-small">
+                                                <i class="fab fa-linkedin"></i>
+                                            </span>
+                                            <span>LinkedIn</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <p class="subtitle" style="color: deeppink;">JERisBrisk</p>
+                                    <div class="buttons is-centered">
+                                        <a target="_blank" class="button is-info" href="https://twitter.com/jerisbrisk">
+                                            <span class="icon">
+                                                <i class="fab fa-twitter"></i>
+                                            </span>
+                                            <span>@jerisbrisk</span>
+                                        </a>
+                                        <a target="_blank" class="button" href="https://github.com/jerisbrisk">
+                                            <span class="icon">
+                                                <i class="fab fa-github"></i>
+                                            </span>
+                                            <span>GitHub</span>
+                                        </a>                                
+                                        <a target="_blank" class="button is-dark" href="https://linkedin.com/in/jeremystephenanderson">
+                                            <span class="icon is-small">
+                                                <i class="fab fa-linkedin"></i>
+                                            </span>
+                                            <span>LinkedIn</span>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="field is-grouped-centered">
-                            <div class="row">
-                                <a target="_blank" class="button is-info" href="https://twitter.com/jerisbrisk">
-                                    <span class="icon">
-                                        <i class="fab fa-twitter"></i>
-                                    </span>
-                                    <span>@jerisbrisk</span>
-                                </a>
-                                <a target="_blank" class="button" href="https://github.com/jerisbrisk">
-                                    <span class="icon">
-                                        <i class="fab fa-github"></i>
-                                    </span>
-                                    <span>GitHub</span>
-                                </a>                                
-                                <a target="_blank" class="button is-dark" href="https://linkedin.com/in/jeremystephenanderson">
-                                    <span class="icon is-small">
-                                        <i class="fab fa-linkedin"></i>
-                                    </span>
-                                    <span>LinkedIn</span>
-                                </a>
-                            </div>
-                        </div>                        
+                        </div>                    
                     </div>
                 </div>
             </div>
