--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -91,18 +91,14 @@
                 </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
-                        <p class="subtitle" id="cluPrice">
-                        </p>
-                    </div>
-                    {{tipjar_navbar}}
-                    <div class="navbar-item">
                         <div class="buttons">
+                            {{tipjar_navbar}}
                             <a class="button is-primary is-outlined"
                                 href="https://github.com/M4cs/clutrack-io" target="_blank">
                                 View Source Code
                             </a>
                             {% if not is_logged_in %}
-                            <a class="button is-primary gradient is-outlined" onclick="login()">
+                            <a class="button is-primary is-outlined" onclick="login()">
                                 Connect To Wallet
                             </a>
                             {% endif %}
