--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -220,7 +220,7 @@
                                     </div>
                                 </div>
                                 <div class="column">
-                                    <p class="subtitle" style="color: deeppink;">JERisBrisk</p>
+                                    <p class="subtitle" style="color: deeppink;">JERisBRISK</p>
                                     <div class="buttons is-centered">
                                         <a target="_blank" class="button is-info" href="https://twitter.com/jerisbrisk">
                                             <span class="icon">
