--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,10 +55,10 @@
     <meta property="twitter:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
     <meta property="twitter:image" content="https://clucoin.com/static/images/3000.png">
-    <link rel="stylesheet" href="/assets/css/clu.css">
+    <link rel="stylesheet" href="https://clutrack.io/assets/css/clu.css">
     <script src="https://kit.fontawesome.com/bfef34323a.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script src="/assets/js/gradanim.js"></script>
+    <script src="https://clutrack.io/assets/js/gradanim.js"></script>
 </head>
 
 <body>
