--- a/app/templates/badaddress.html
+++ b/app/templates/badaddress.html
@@ -54,7 +54,7 @@
     <meta property="twitter:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
     <meta property="twitter:image" content="https://clucoin.com/static/images/3000.png">
-    <link rel="stylesheet" href="/assets/css/clu.css">
+    <link rel="stylesheet" href="https://clutrack.io/assets/css/clu.css">
     <script src="https://kit.fontawesome.com/bfef34323a.js" crossorigin="anonymous"></script>
 </head>
 
