--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -52,7 +52,7 @@
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
     <meta property="twitter:image"
         content="https://clucoin.com/static/images/3000.png">
-    <link rel="stylesheet" href="/assets/css/clu.css">
+    <link rel="stylesheet" href="https://clutrack.io/assets/css/clu.css">
     <script src="assets/js/gradanim.js"></script>
 </head>
 
