--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  class="has-navbar-fixed-top">
 <style>
     .center-screen {
         display: flex;
@@ -8,10 +8,6 @@
         align-items: center;
         text-align: center;
         min-height: 100vh;
-    }
-    html {
-        overflow: scroll;
-        overflow-x: hidden;
     }
     ::-webkit-scrollbar {
         width: 0;  /* Remove scrollbar space */
@@ -29,7 +25,7 @@
     <script data-ad-client="ca-pub-9279253230674491" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="utf-8">
     <link rel="icon" href="https://clucoin.com/static/images/favicon/favicon-32x32.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>CluTrack | CLU Reward Tracker</title>
     <meta name="title" content="CluTrack.io - CluCoin Redistribution Tracker">
     <meta name="description"
@@ -119,33 +115,19 @@
                 <h1 class="title fancyTitle is-3" id="mainTitle">
                     Loading Rewards for Wallet:
                 </h1>
-
-                    <a src="https://bscscan.com/address/{{wallet_addr}}" target="_blank" class="subtitle"
-                        style="color: rgb(104, 104, 104)">{{wallet_addr}}</a>
-                    <p class="subtitle">
-                        RPB = Reward Per Block (0.3 Blocks per second are processed)
-                    </p>
-                    <div id="realtimeBalance">
-                        <p class="subtitle">
-                            Loading realtime stats...
-                        </p>
-                    </div>                    
-                    <div id="rewardStats">
-                    </div>
-                    <div id="longTermStats">
-                        <p class="subtitle" style="color: black">
-                        </p>
-                    </div>
+                <a src="https://bscscan.com/address/{{wallet_addr}}" target="_blank" class="subtitle"
+                    style="color: rgb(104, 104, 104)">{{wallet_addr}}</a>
+                <p class="subtitle">
+                    RPB = Reward Per Block (0.3 Blocks per second are processed)
                 </p>
-                <div id="rewardStats">
+                <div class="container" id="realtimeBalance">
                     <p class="subtitle">
+                        Loading realtime stats...
                     </p>
+                </div>                    
+                <div class="container has-text-centered is-mobile" id="rewardStats">
                 </div>
-                <br>
-                <div id="longTermStats">
-                    <p class="subtitle" style="display: none;">
-                        {{longterm_msg}}
-                    </p>
+                <div class="container has-text-centered" id="longTermStats">
                 </div>
             </div>
         </div>
