Fix Mobile a Tad

--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -109,7 +109,7 @@
             </div>
         </div>
     </nav>
-    <section class="section hero is-fullheight is-dark"  style="background-color: rgb(32, 32, 32);">
+    <section class="hero is-fullheight is-dark"  style="background-color: rgb(32, 32, 32);">
         <div class="hero-body">
             <div class="container has-text-centered">
                 <h1 class="title fancyTitle is-3" id="mainTitle">
